--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>JavaScript Arcade Game!</title>
+    </head>
+    <body>
+        <center><canvas id="gameCanvas" width="800" height="600"></canvas></center>
+
+        <script type="text/javascript" src="game.js"></script>
+    </body>
+</html>
