--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>JavaScript Arcade Game!</title>
+        <title>Inng!</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" type="image/ico" href="img/profile.png">
+        <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
     <body>
-        <center><canvas id="gameCanvas" width="800" height="600"></canvas></center>
+        <div class="container">
+            <img src="img/profile.png" alt="Profile pic" class="pic">
 
-        <script type="text/javascript" src="game.js"></script>
+            <div class="content-block">
+                <p class="about">                   
+                    Ingrid <br>
+                    22 <br>
+                    Brazil <br>
+                    Backend dev <br>
+                    DevOps <br>
+                    Computer Science undergraduate in course <br>
+                    Functional programming <br>
+                    Art <br>
+                    Music <br>
+                    Animations <br>
+                    <br>
+                    ingridrosselis@gmail.com <br>
+                </p>                
+                
+                <div class="links">
+                    <a href="https://www.reddit.com/user/Innorin" target="_blank"><img src="img/reddit.png" alt="" class="reddit"></a>
+                    <a href="https://github.com/irscunha" target="_blank"><img src="img/github.png" alt="" class="github"></a>
+                    <a href="https://www.linkedin.com/in/ingridrosselis/" target="_blank"><img src="img/linkedin.png" alt="" class="linkedin"></a>
+                    <a href="https://twitter.com/m_ozambiquehere" target="_blank"><img src="img/twitter.png" alt="" class="twitter"></a>
+                    <a href="https://www.instagram.com/irscunha/" target="_blank"><img src="img/instagram.png" alt="" class="instagram"></a>
+                    <a href="https://www.meetup.com/members/262353843/" target="_blank"><img src="img/meetup.png" alt="" class="meetup"></a>
+                    <a href="https://open.spotify.com/user/innorin" target="_blank"><img src="img/spotify.png" alt="" class="spotify"></a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
