--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Inng!</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="icon" type="image/ico" href="img/profile.png">
+        <link rel="icon" type="image/ico" href="img/icon.gif">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
@@ -14,16 +14,13 @@
 
             <div class="content-block">
                 <p class="about">                   
-                    Ingrid <br>
-                    22 <br>
-                    Brazil <br>
-                    Backend dev <br>
-                    DevOps <br>
+                    Ingrid • 22 • Brazil <br>
+                    Backend dev • DevOps • Soon-to-be fullstack dev <br>
                     Computer Science undergraduate in course <br>
-                    Functional programming <br>
-                    Art <br>
+                    Functional programming • Microsservices <br>
+                    Design • Art • Animations • Games<br>
                     Music <br>
-                    Animations <br>
+                    Cute things <br>
                     <br>
                     ingridrosselis@gmail.com <br>
                 </p>                
