--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 </p>                
                 
                 <div class="links">
-                    <a href="https://www.reddit.com/user/Innorin" target="_blank"><img src="img/reddit.png" alt="" class="reddit"></a>
-                    <a href="https://github.com/irscunha" target="_blank"><img src="img/github.png" alt="" class="github"></a>
+                    <a href="http://steamcommunity.com/id/innng" target="_blank"><img src="img/steam.png" alt="" class="steam"></a>
+                    <a href="https://github.com/innng" target="_blank"><img src="img/github.png" alt="" class="github"></a>
                     <a href="https://www.linkedin.com/in/ingridrosselis/" target="_blank"><img src="img/linkedin.png" alt="" class="linkedin"></a>
                     <a href="https://twitter.com/m_ozambiquehere" target="_blank"><img src="img/twitter.png" alt="" class="twitter"></a>
                     <a href="https://www.instagram.com/irscunha/" target="_blank"><img src="img/instagram.png" alt="" class="instagram"></a>
