--- a/index.html
+++ b/index.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <title>Inng!</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="icon" type="image/ico" href="img/icon.gif">
-        <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Ingrid Rosselis</title>
+
+        <link rel="icon" type="image/ico" href="assets/icon.gif" />
+
+        <link
+            href="https://fonts.googleapis.com/css2?family=Exo:wght@300&display=swap"
+            rel="stylesheet"
+        />
+
+        <link rel="stylesheet" href="styles/main.css" />
     </head>
     <body>
-        <div class="container">
-            <img src="img/profile.png" alt="Profile pic" class="pic">
+        <div class="animated-bg">
+            <div class="stars"></div>
+            <div class="twinkling"></div>
+        </div>
 
-            <div class="content-block">
-                <p class="about">                   
-                    Ingrid • 22 • Brazil <br>
-                    Backend dev • DevOps • Soon-to-be fullstack dev <br>
-                    Computer Science undergraduate in course <br>
-                    Functional programming • Microsservices <br>
-                    Design • Art • Animations • Games<br>
-                    Music <br>
-                    Cute things <br>
-                    <br>
-                    ingridrosselis@gmail.com <br>
-                </p>                
-                
-                <div class="links">
-                    <a href="http://steamcommunity.com/id/innng" target="_blank"><img src="img/steam.png" alt="" class="steam"></a>
-                    <a href="https://github.com/innng" target="_blank"><img src="img/github.png" alt="" class="github"></a>
-                    <a href="https://www.linkedin.com/in/ingridrosselis/" target="_blank"><img src="img/linkedin.png" alt="" class="linkedin"></a>
-                    <a href="https://twitter.com/m_ozambiquehere" target="_blank"><img src="img/twitter.png" alt="" class="twitter"></a>
-                    <a href="https://www.instagram.com/irscunha/" target="_blank"><img src="img/instagram.png" alt="" class="instagram"></a>
-                    <a href="https://www.meetup.com/members/262353843/" target="_blank"><img src="img/meetup.png" alt="" class="meetup"></a>
-                    <a href="https://open.spotify.com/user/innorin" target="_blank"><img src="img/spotify.png" alt="" class="spotify"></a>
-                </div>
-            </div>
+        <div class="content">
+            <!-- <img -->
+            <!-- src="https://avatars0.githubusercontent.com/u/26755058?s=460&u=cf186ccee0ca2c3b2ccf76e03948730fbe42aa10&v=4" -->
+            <!-- class="profile-pic" -->
+            <!-- /> -->
+            <!-- <h1>INGRID ROSSELIS</h1> -->
         </div>
     </body>
 </html>
