Apply minor fixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/ico" href="assets/icon.gif" />
 
         <link
-            href="https://fonts.googleapis.com/css2?family=Exo:wght@300;400;700&family=Montserrat:ital,wght@0,300;0,700;1,400&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Exo:wght@400;700&family=Montserrat:wght@400;700&display=swap"
             rel="stylesheet"
         />
 
@@ -36,7 +36,6 @@
                     Back-end dev • DevOps • Soon-to-be fullstack dev <br />
                     Pythonist <br />
                     Computer Science bachelor in course <br />
-                    Functional programming • Microsservices <br />
                     Design • Art • Animations • Games<br />
                     Music <br />
                     Cute things <br />
