Add youracclaim profile to links

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
                         rel="noopener noreferrer"
                         ><div id="meetup"></div
                     ></a>
+                    <a
+                        href="https://www.youracclaim.com/users/ingridrosselis/badges"
+                        class="badges"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        ><div id="badges"></div
+                    ></a>
                 </div>
             </div>
         </div>
